# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_admp"
version = "1.1.0a"
description = "ADMP in PyTorch backend"
readme = "README.md"
license = { file = ".license-header.txt" }
dependencies = [
    "torch>=2.1.0",
    "torchopt==0.7.3",
    "numpy>=1.20.0, <2.0",
    "scipy>=1.6.0",
    "ase",
    "vesin[torch]",
]
[project.urls]
Homepage = "https://github.com/ChiahsinChu/torch-admp"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "openmm>=7.7.0",
    "jax>=0.4.1, <=0.4.20",
    "jaxlib>=0.4.1, <=0.4.20",
    "freud-analysis==3.0.0",
    "DMFF @ git+https://github.com/ChiahsinChu/DMFF.git@devel",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-glightbox>=0.3.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-gen-files>=0.5.0",
    "griffe>=0.48.0"
]

[tool.setuptools]
packages = ["torch_admp"]
